--- a/login.html
+++ b/login.html
@@ -16,13 +16,12 @@
 							<p>Password
 							<input type="password" name="password" class="input-box" placeholder="Passwoed" required>
                             </p>
-                            <a href="">
+                            <a href="main.html">
 							<button type="submit" class="login-btn">LogIn</button></a>
 							<a href="">Forgot  Password?</a>
 						</form>
                         <a href="register.html">
-                            <button type="submit" class="reg-btn">new</button>
-                        </a>
+                        <button type="submit" class="reg-btn">new</button></a>
                     </div>
                 
             </div>
