--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
         <div class="home-form">
            
             <a href="login.html"><button type="submit">Admin</button></a>
-            <a href="login.html"><button type="submit">User</button></a>
+            <a href="User_login.html"><button type="submit">User</button></a>
         </div>
     </body>
 </html>
