--- a/User_login.html
+++ b/User_login.html
@@ -11,7 +11,7 @@
 				
 					<div class="front">
 						<h1>LOGIN</h1>
-						<form action="login.php" method="POST">
+						<form action="user_login.php" method="POST">
 							
 							<p>Email Id 
 								<input type="email" name="Email" class="input-box" placeholder="Email" required></p>
