--- a/User_Side/User_ContactUs.html
+++ b/User_Side/User_ContactUs.html
@@ -8,23 +8,23 @@
 <body>
 <div class="menu-bar">
 <ul>
-	<li><a href="file:///F:/Project/User_Homepage.html" style="font-size:15px;"><i class="fa fa-home"></i> Home</a></li>
+	<li><a href="User_Homepage.html" style="font-size:15px;"><i class="fa fa-home"></i> Home</a></li>
 	<li><a href="" style="font-size:15px;"><i class="fa fa-newspaper-o"></i> Menu</a>
 		<div class="sub-menu-1" style="position: absolute; z-index: 1;border-radius: 15%">
 			<ul>
-				<li><a href="file:///F:/Project/Menu_Monday.html">Monday</a></li>
-				<li><a href="file:///F:/Project/Menu_Tuesday.html">Tuesday</a></li>
-				<li><a href="file:///F:/Project/Menu_Wednesday.html">Wednesday</a></li>
-				<li><a href="file:///F:/Project/Menu_Thursday.html">Thursday</a></li>
-				<li><a href="file:///F:/Project/Menu_Friday.html">Frinday</a></li>
-				<li><a href="file:///F:/Project/Menu_Saturday.html">Saturday</a></li>
+				<li><a href="Menu_Monday.html">Monday</a></li>
+				<li><a href="Menu_Tuesday.html">Tuesday</a></li>
+				<li><a href="Menu_Wednesday.html">Wednesday</a></li>
+				<li><a href="Menu_Thursday.html">Thursday</a></li>
+				<li><a href="/Menu_Friday.html">Frinday</a></li>
+				<li><a href="Menu_Saturday.html">Saturday</a></li>
 			</ul>
 		</div>
 	</li>
-	<li><a href="file:///F:/Project/User_Services.html" style="font-size:15px;"><i class="fa fa-shopping-bag"></i> Services</a></li>
+	<li><a href="User_Services.html" style="font-size:15px;"><i class="fa fa-shopping-bag"></i> Services</a></li>
 	<li><a href=""><i class="fa fa-rupee" style="font-size:15px;"></i> Package</a></li>
-	<li><a href="file:///F:/Project/User_AboutUs.html" style="font-size:15px;"><i class="fa fa-user-circle"></i> About Us</a></li>
-	<li><a href="file:///F:/Project/User_ContactUs.html" style="font-size:15px;"><i class="fa fa-phone"></i> Contact Us</a></li>
+	<li><a href="User_AboutUs.html" style="font-size:15px;"><i class="fa fa-user-circle"></i> About Us</a></li>
+	<li><a href="User_ContactUs.html" style="font-size:15px;"><i class="fa fa-phone"></i> Contact Us</a></li>
 </ul>
 </div>
 <br><br>
