--- a/register.html
+++ b/register.html
@@ -19,7 +19,7 @@
                         <p>Password
                         <input type="password" name="Pass" id="pass1" class="input-box" placeholder="Passwoed" required></p>
                         <p>Confirm Password
-                        <input type="password" name="ConPass" id="pass2" class="input-box" placeholder="Confirm Password" required></p>
+                        <input type="password/text" name="ConPass" id="pass2" class="input-box" placeholder="Confirm Password" required></p>
                         <p>Email
                         <input type="email" name="Email" class="input-box" placeholder="Email" required></p>
                         <p>Contact_Number
