--- a/Admin/login.html
+++ b/Admin/login.html
@@ -23,7 +23,7 @@
 							<a href="forgot.html">Forgot  Password?</a>
 						</form>
                         <a href="register.html">
-                        <button type="submit" class="reg-btn">new</button></a>
+                        <button type="submit" class="reg-btn">New User? Register Here</button></a>
                     </div>
                
             </div>
