--- a/Admin/main.html
+++ b/Admin/main.html
@@ -2,18 +2,18 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="main.css">
-    <script src="https://kit.fontawesome.com/e246c40191.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    
 </head>
 <body>
     <div class="menu-bar">
          <ul>
-            <li class="active"><a href="#"><i class="fas fa-home"></i>Home</a></li>
-                 <li><a href="#"><i class="fas fa-registered"></i>Registation</a>
+            <li class="active"><a href="#"><i class="fa fa-home"></i> Home</a></li>
+                <li><a href="#"><i class="fa fa-registered"></i> Registation</a>
                     <div class="sub-menu1">
                         <ul>
-                            <li><a href="#">Admin</a></li>
-                            <li><a href="#">User</a></li>
+                            <li><a href="./register.html">Admin</a></li>
+                            <li><a href="./register.html">User</a></li>
                         </ul>
 
 
@@ -24,10 +24,10 @@
 
 
 
-
-                 <li><a href="#"><i class="fas fa-users"></i>Account</a></li>
-                 <li><a href="#"><i class="fas fa-rupee-sign"></i>Payment</a></li>
-                 <li><a href="login.html"><i class="fas fa-sign-out-alt"></i>Logout</a></li>
+                 <li><a href="QRcode.html"><i class="fa fa-qrcode"></i> QR Code</a></li>
+                 <li><a href="#"><i class="fa fa-users"></i> Account</a></li>
+                 <li><a href="#"><i class="fa fa-rupee"></i> Payment</a></li>
+                 <li><a href="./login.html"><i class="fa fa-sign-out"></i> Logout</a></li>
         </ul>
     </div>
 </body>
