--- a/Admin/register.html
+++ b/Admin/register.html
@@ -25,7 +25,7 @@
                         <p>Contact_Number
                         <input type="number" name="Phone" class="input-box" placeholder="Contact_Number" required></p>
                         <a href="login.html">
-                        <button type="submit" value="submit" name="submit" class="reg-btn">Submit</button></a>		
+                        <button type="submit" value="submit" name="submit" class="reg-btn">Validate</button></a>		
                         </form>
                     
                 </div>	
