update_reset_pass

--- a/Admin/forgot.html
+++ b/Admin/forgot.html
@@ -12,7 +12,7 @@
                     <div class="front" >  
                         <h1>Reset Password</h1>
                        
-                        <p>Email
+                        <p>Email Id
                         <input type="email" name="Email" class="input-box" placeholder="Enter Email Address " required></p>
                        
                         <a href="#">
