--- a/Admin/main.html
+++ b/Admin/main.html
@@ -13,7 +13,7 @@
                     <div class="sub-menu1">
                         <ul>
                             <li><a href="./register.html">Admin</a></li>
-                            <li><a href="./register.html">User</a></li>
+                            <li><a href="/Mess_management/User/user_register.html">User</a></li>
                         </ul>
 
 
@@ -24,7 +24,7 @@
 
 
 
-                 <li><a href="QRcode.html"><i class="fa fa-qrcode"></i> QR Code</a></li>
+                 <li><a href="./QRcode.html"><i class="fa fa-qrcode"></i> QR Code</a></li>
                  <li><a href="#"><i class="fa fa-users"></i> Account</a></li>
                  <li><a href="#"><i class="fa fa-rupee"></i> Payment</a></li>
                  <li><a href="./login.html"><i class="fa fa-sign-out"></i> Logout</a></li>
