--- a/User/User_Side/User_Homepage.html
+++ b/User/User_Side/User_Homepage.html
@@ -29,6 +29,8 @@
 	<li><a href=""><i class="fa fa-rupee" style="font-size:15px;"></i> Package</a></li>
 	<li><a href="./User_AboutUs.html" style="font-size:15px;"><i class="fa fa-user-circle"></i> About Us</a></li>
 	<li><a href="./User_ContactUs.html" style="font-size:15px;"><i class="fa fa-phone"></i> Contact Us</a></li>
+	<li><a href="/User/User_login.html" style="font-size:15px;"><i class="fa fa-sign-out"></i> Logout</a></li>
+
 </ul>
 </div>
 <br><br>
@@ -40,7 +42,7 @@
 		<img src="./Breakfast/evegb.jpg" style="width:185px; height:250px;" class="photo"> 
 		<img src="./Breakfast/ejam.jpg" style="width:185px; height:250px;" class="photo"> 
 		<img src="./Breakfast/esalad.jfif" style="width:185px; height:250px;" class="photo"> 
-		<img src="./Breakfast/enimbu.jpg" style="width:185px; height:250px;" class="photo"> 
+		<img src="./Breakfast/epaneers.jpg" style="width:185px; height:250px;" class="photo"> 
 		<img src="./Breakfast/poha2.jpg" style="width:185px; height:250px;" class="photo"> 
 	</figure>
 </div>
