--- a/Admin/login.html
+++ b/Admin/login.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>login</title>
 		<link rel="stylesheet" type="text/css" href="login.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		
 	</head>
 	<body>
@@ -17,10 +18,12 @@
 								<input type="email" name="Email" class="input-box" placeholder="Email" required></p>
 							<p>Password
 								<input type="password" name="Pass" id="pass1" class="input-box" placeholder="Password" required></p>
+							<!--<span class="show-hide">
+								<i class="fa fa-eye"></i></span>-->
                             <a href="main.html">
 							<button type="submit" name="submit" class="login-btn">LogIn</button>
 						</a>
-							<a href="forgot.html">Forgot  Password?</a>
+							<a href="forgot.html">Forgot  Password ?</a>
 						</form>
                         <a href="register.html">
                         <button type="submit" class="reg-btn">New User? Register Here</button></a>
@@ -28,5 +31,20 @@
                
             </div>
         </div>
+		<!--<script>
+			const pass_field=document.querySelector("pass1");
+			const show_btn=document.querySelector("i");
+			show_btn.addEventListener("click",function(){
+				if(pass_field.type ==="password"){
+					pass_field.type="text";
+					show_btn.classList.add("hide");
+				}
+				else
+				{
+					pass_field.type="password";
+					show_btn.classList.remove("hide");
+				}
+			});
+		</script>-->
     </body>
 </html>
