--- a/User/user_register.html
+++ b/User/user_register.html
@@ -3,14 +3,14 @@
 		<title>registration Form</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">      
-		<link rel="stylesheet" type="text/css" href="register.css">
+		<link rel="stylesheet" type="text/css" href="./register.css">
 	</head>
 	<body>
         
 		<div class="container">
 			<div class="card">
                 <div class="card-back">
-                    <form action="register.php" method="POST">
+                    <form action="./user_register.php" method="POST">
                     <h1>REGISTER</h1>
                         <p>First Name
                         <input type="text"  name="FName" class="input-box" placeholder="First Name" required></p>
@@ -20,11 +20,11 @@
                         <input type="password" name="Pass" id="pass1" class="input-box" placeholder="Passwoed" required></p>
                         <p>Confirm Password
                         <input type="password/text" name="ConPass" id="pass2" class="input-box" placeholder="Confirm Password" required></p>
-                        <p>Email Id
+                        <p>Email
                         <input type="email" name="Email" class="input-box" placeholder="Email" required></p>
                         <p>Contact_Number
                         <input type="number" name="Phone" class="input-box" placeholder="Contact_Number" required></p>
-                        <a href="login.html">
+                        <a href="">
                         <button type="submit" value="submit" name="submit" class="reg-btn">Validate</button></a>		
                         </form>
                     
