--- a/Admin/main.html
+++ b/Admin/main.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title></title>
    
 </head>
 <body>
@@ -25,7 +29,7 @@
 
 
                  <li><a href="./QRcode.html"><i class="fa fa-qrcode"></i> QR Code</a></li>
-                 <li><a href="#"><i class="fa fa-users"></i> Account</a></li>
+                 <li><a href="./records.php"><i class="fa fa-users"></i> Account</a></li>
                  <li><a href="#"><i class="fa fa-rupee"></i> Payment</a></li>
                  <li><a href="./login.html"><i class="fa fa-sign-out"></i> Logout</a></li>
         </ul>
