--- a/User/User_Side/Menu_Tuesday.html
+++ b/User/User_Side/Menu_Tuesday.html
@@ -99,10 +99,19 @@ body {
   <li><a href=""><i class="fa fa-rupee" style="font-size:15px;"></i> Package</a></li>
   <li><a href="User_AboutUs.html" style="font-size:15px;"><i class="fa fa-user-circle"></i> About Us</a></li>
   <li><a href="User_ContactUs.html" style="font-size:15px;"><i class="fa fa-phone"></i> Contact Us</a></li>
+  <li><a href="" style="font-size:15px;padding:5px">More <i class="fa fa-angle-double-down"></i></a>
+    <div class="sub-menu-1" style="position: absolute; z-index: 1;border-radius: 15%">
+      <ul>
+        <li><a href="">Scan</a></li>
+        <li><a href="">Log-Out</a></li>
+        
+      </ul>
+    </div>
+  </li>
 </ul>
 </div>
 <br><br>
-<marquee style="color:white;" direction = "right", scrollamount="15"><i><b style="font-size:150%;text-shadow: 1px 1px blue">WELCOME TO P & Z EATERY AND EATING HOUSE</b></i></marquee>
+<marquee style="color:white;background-color: black;" direction = "right", scrollamount="15"><i><b style="font-size:150%;text-shadow: 1px 1px blue">WELCOME TO P & Z EATERY AND EATING HOUSE</b></i></marquee>
 <br><br>
 <h2 style="margin: 20px;"> BREAKFAST</h2>
 <div class="container" style="margin-left:60px;margin-top: 30px">
