--- a/User/User_Side/User_ContactUs.html
+++ b/User/User_Side/User_ContactUs.html
@@ -25,12 +25,21 @@
 	<li><a href=""><i class="fa fa-rupee" style="font-size:15px;"></i> Package</a></li>
 	<li><a href="User_AboutUs.html" style="font-size:15px;"><i class="fa fa-user-circle"></i> About Us</a></li>
 	<li><a href="User_ContactUs.html" style="font-size:15px;"><i class="fa fa-phone"></i> Contact Us</a></li>
+	<li><a href="" style="font-size:15px;padding:5px">More <i class="fa fa-angle-double-down"></i></a>
+		<div class="sub-menu-1" style="position: absolute; z-index: 1;border-radius: 15%">
+			<ul>
+				<li><a href="">Scan</a></li>
+				<li><a href="">Log-Out</a></li>
+				
+			</ul>
+		</div>
+	</li>
 </ul>
 </div>
 <br><br>
-<marquee style="color:white;" direction = "right", scrollamount="15"><i><b style="font-size:150%;text-shadow: 1px 1px blue">WELCOME TO P & Z EATERY AND EATING HOUSE</b></i></marquee><br><br>
-<h1 style="margin: 20px;padding: 10px; text-align: center;"><b>Hello!! Customers..</b></h1>
-<p style="margin: 20px;padding: 10px;font-size: 25px"> For any queries regarding the mess and its services please contact the people at desk.</p><p style="color:white;margin: 20px;padding: 10px;font-size: 25px">Timing only from 9.00 am to 9.00 pm</p>
+<marquee style="color:white;background-color: black" direction = "right", scrollamount="15"><i><b style="font-size:150%;text-shadow: 1px 1px blue">WELCOME TO P & Z EATERY AND EATING HOUSE</b></i></marquee><br><br>
+<div><h1 style="margin: 20px;padding: 10px; text-align: center;"><b>Hello!! Customers..</b></h1></div>
+<p style="margin: 20px;padding: 10px;font-size: 25px"> For any queries regarding the mess and its services please contact the people at desk.</p><p style="margin: 20px;padding: 10px;font-size: 25px">Timing only from 9.00 am to 9.00 pm</p>
 <p style="margin: 20px;font-size: 25px"><b>You can contact to :</b></p>
 <ul style="margin: 20px;font-size: 20px;list-style: none">
 	<li> Malgouda Patil  - 91+ 8951106537</li>
@@ -40,8 +49,8 @@
 <br>
 <p style="margin: 20px;font-size: 25px"><b>You can also reach us up by mailing to these concerned ID's. Mentioned below (ONLY FOR QUERIES)</b></p>
 <ul style="margin: 20px;font-size: 20px;list-style: none">
-	<li>Malgouda Patil  - <a href="https://mail.google.com/mail/u/0/#inbox?compose=new">mallikarjunpatil3789@gmail.com</a></li>
-	<li>Ajay Zad  - <a href="https://mail.google.com/mail/u/0/#inbox?compose=new">ajayzad18@gmail.com</a></li>
+	<li>Malgouda Patil  - <a href="mailto:pandzeatery@gmail.com">mallikarjunpatil3789@gmail.com</a></li>
+	<li>Ajay Zad  - <a href="mailto:pandzeatery@gmail.com">ajayzad18@gmail.com</a></li>
 </ul><br><br>
 <div style="background: black;color: white;font-size: 20px"> Connect us at : 
 	<a href="https://www.facebook.com/"><i class="fa fa-facebook-square" style="font-size: 20px;color:white"></i></a>
