--- a/User/User_Side/User_Homepage.html
+++ b/User/User_Side/User_Homepage.html
@@ -29,7 +29,15 @@
 	<li><a href=""><i class="fa fa-rupee" style="font-size:15px;"></i> Package</a></li>
 	<li><a href="./User_AboutUs.html" style="font-size:15px;"><i class="fa fa-user-circle"></i> About Us</a></li>
 	<li><a href="./User_ContactUs.html" style="font-size:15px;"><i class="fa fa-phone"></i> Contact Us</a></li>
-	<li><a href="/User/User_login.html" style="font-size:15px;"><i class="fa fa-sign-out"></i> Logout</a></li>
+	<li><a href="" style="font-size:15px;">More <i class="fa fa-angle-double-down"></i></a>
+		<div class="sub-menu-1" style="position: absolute; z-index: 1;border-radius: 15%">
+			<ul>
+				<li><a href="./qr-code-scanner/index.html">Scan</a></li>
+				<li><a href="">Log-Out</a></li>
+				
+			</ul>
+		</div>
+	</li>
 
 </ul>
 </div>
