--- a/User/User_Side/User_Services.html
+++ b/User/User_Side/User_Services.html
@@ -9,7 +9,7 @@
 <body>
 <div class="menu-bar">
 <ul>
-	<li><a href="User_Homepage.html" style="font-size:15px;"><i class="fa fa-home"></i> Home</a></li>
+	<li><a href="file:///F:/Project/User_Homepage.html" style="font-size:15px;"><i class="fa fa-home"></i> Home</a></li>
 	<li><a href="" style="font-size:15px;"><i class="fa fa-newspaper-o"></i> Menu</a>
 		<div class="sub-menu-1" style="position: absolute; z-index: 1;border-radius: 15%">
 			<ul>
@@ -26,10 +26,19 @@
 	<li><a href=""><i class="fa fa-rupee" style="font-size:15px;"></i> Package</a></li>
 	<li><a href="User_AboutUs.html" style="font-size:15px;"><i class="fa fa-user-circle"></i> About Us</a></li>
 	<li><a href="User_ContactUs.html" style="font-size:15px;"><i class="fa fa-phone"></i> Contact Us</a></li>
+	<li><a href="" style="font-size:15px;padding:5px">More <i class="fa fa-angle-double-down"></i></a>
+		<div class="sub-menu-1" style="position: absolute; z-index: 1;border-radius: 15%">
+			<ul>
+				<li><a href="./qr-code-scanner/index.html">Scan</a></li>
+				<li><a href="">Log-Out</a></li>
+				
+			</ul>
+		</div>
+	</li>
 </ul>
 </div>
 <br><br>
-<marquee style="color:white;" direction = "right", scrollamount="15"><i><b style="font-size:150%;text-shadow: 1px 1px blue">WELCOME TO P & Z EATERY AND EATING HOUSE</b></i></marquee>
+<marquee style="color:white;background-color: black" direction = "right", scrollamount="15"><i><b style="font-size:150%;text-shadow: 1px 1px blue">WELCOME TO P & Z EATERY AND EATING HOUSE</b></i></marquee>
 
 <p style="margin: 20px;padding: 10px;font-size: 25px"><abbr title="P & Z EATERY AND EATING HOUSE"><strong>PZEAE</strong></abbr> at Belgaum has a wide range of products and services to cater to the varied requirements of their customers. The staff at this establishment are courteous and prompt at providing any assistance. They readily answer any queries or questions that you may have and make their customers satisfy and comfortable within 24hrs of a query reported. </p>
 
@@ -40,7 +49,7 @@
 	<dt style="margin: 20px;font-size: 25px"> Take Away Services ( <i class="fa fa-shopping-bag"></i> ) : </dt> 
 	<dd style="margin: 20px"> At our mess we even offer <b> Take Away Services (Parcel) </b> to our registered customers who choose to have their food at their own space. As far as the parcel is been concerned, we make sure that the hygiene is been maintained and utmost care will be taken regarding the packing and the packkage of the food delivery. </dd><br><hr>
 	<dt style="margin: 20px;font-size: 25px"> Delivery Services ( <i class="fa fa-motorcycle"></i> ) :</dt>
-	<dd style="margin: 20px"> We offer <b> Delivery Services </b> to our registered customers who cannot visit our mess due to their tough routine schudule and who wish to have their food at their own space. As far as the parcel is been concerned, we make sure that the hygiene is been maintained and utmost care will be taken regarding the packing and the packkage of the food delivery. We charge extra <strong> 50Rs </strong> per delivery of a package which will be collected by our delivery man <strong>( In cash only ) </strong>. <br><br><a href="file:///F:/Project/User_ContactUs.html" style="color:red"><b> Click here to get to our contact information page. </b></a></dd>
+	<dd style="margin: 20px"> We offer <b> Delivery Services </b> to our registered customers who cannot visit our mess due to their tough routine schudule and who wish to have their food at their own space. As far as the parcel is been concerned, we make sure that the hygiene is been maintained and utmost care will be taken regarding the packing and the packkage of the food delivery. We charge extra <strong> 50Rs </strong> per delivery of a package which will be collected by our delivery man <strong>( In cash only ) </strong>. <br><br><a href="file:///F:/Project/User_ContactUs.html" style="color:brown"><i> Click here to get to our contact information page. </i></a></dd>
 	<br><hr><br>
 	<dt style="margin: 20px;font-size: 25px"> Payment mode ( <i class="fa fa-rupee"></i> ) :</dt>
 	<dd style="margin: 20px"> At our mess we accept cash, debit card, UPI (phonePe, Google pay, Amazon pay) </dd>
