--- a/Admin/login.html
+++ b/Admin/login.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<title>login</title>
+		<meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="login.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		
@@ -24,27 +27,29 @@
 							<button type="submit" name="submit" class="login-btn">LogIn</button>
 						</a>
 							<a href="forgot.html">Forgot  Password ?</a>
+							
 						</form>
-                        <a href="register.html">
-                        <button type="submit" class="reg-btn">New User? Register Here</button></a>
+						<a href="register.html">
+							<button type="submit" class="reg-btn">New User? Register Here</button></a>
+                       <!-- <script>
+							const pass_field=document.querySelector("pass1");
+							const show_btn=document.querySelector("i");
+							show_btn.addEventListener("click",function(){
+								if(pass_field.type ==="password"){
+									pass_field.type="text";
+									show_btn.classList.add("hide");
+								}
+								else
+								{
+									pass_field.type="password";
+									show_btn.classList.remove("hide");
+								}
+							});
+						</script>-->
                     </div>
                
             </div>
         </div>
-		<!--<script>
-			const pass_field=document.querySelector("pass1");
-			const show_btn=document.querySelector("i");
-			show_btn.addEventListener("click",function(){
-				if(pass_field.type ==="password"){
-					pass_field.type="text";
-					show_btn.classList.add("hide");
-				}
-				else
-				{
-					pass_field.type="password";
-					show_btn.classList.remove("hide");
-				}
-			});
-		</script>-->
+		
     </body>
 </html>
