--- a/User/User_Side/User_AboutUs.html
+++ b/User/User_Side/User_AboutUs.html
@@ -80,10 +80,19 @@ body {
 	<li><a href=""><i class="fa fa-rupee"></i> Package</a></li>
 	<li><a href="User_AboutUs.html"><i class="fa fa-user-circle"></i> About Us</a></li>
 	<li><a href="User_ContactUs.html"><i class="fa fa-phone"></i> Contact Us</a></li>
+  <li><a href="" style="font-size:15px;padding:5px">More <i class="fa fa-angle-double-down"></i></a>
+		<div class="sub-menu-1" style="position: absolute; z-index: 1;border-radius: 15%">
+			<ul>
+				<li><a href="">Scan</a></li>
+				<li><a href="">Log-Out</a></li>
+				
+			</ul>
+		</div>
+	</li>
 </ul>
 </div>
 <br><br>
-<marquee style="color:white;" direction = "right", scrollamount="15"><i><b style="font-size:150%;text-shadow: 1px 1px blue">WELCOME TO P & Z EATERY AND EATING HOUSE</b></i></marquee><br><br>
+<marquee style="color:white;background-color: black;" direction = "right", scrollamount="15"><i><b style="font-size:150%;text-shadow: 1px 1px blue">WELCOME TO P & Z EATERY AND EATING HOUSE</b></i></marquee><br><br>
 
 <br><br>
 <p style="float: left;margin-left: 40px;margin-right: 100px;"><b>History :</b></p>
