--- a/User/User_Side/Menu_Saturday.html
+++ b/User/User_Side/Menu_Saturday.html
@@ -94,14 +94,14 @@ body {
     </div>
   </li>
   <li><a href="User_Services.html" style="font-size:15px;"><i class="fa fa-shopping-bag"></i> Services</a></li>
-  <li><a href=""><i class="fa fa-rupee" style="font-size:15px;"></i> Package</a></li>
+  <li><a href="./package.html"><i class="fa fa-rupee" style="font-size:15px;"></i> Package</a></li>
   <li><a href="User_AboutUs.html" style="font-size:15px;"><i class="fa fa-user-circle"></i> About Us</a></li>
   <li><a href="User_ContactUs.html" style="font-size:15px;"><i class="fa fa-phone"></i> Contact Us</a></li>
   <li><a href="" style="font-size:15px;padding:5px">More <i class="fa fa-angle-double-down"></i></a>
     <div class="sub-menu-1" style="position: absolute; z-index: 1;border-radius: 15%">
       <ul>
-        <li><a href="">Scan</a></li>
-        <li><a href="">Log-Out</a></li>
+        <li><a href="./qr-code-scanner/index.html">Scan</a></li>
+        <li><a href="/mess_management/User/User_login.html">Log-Out</a></li>
         
       </ul>
     </div>
@@ -260,7 +260,7 @@ body {
   <dd style="font-size: 20px;"> <b>Dinner :</b><i> 08.00 pm to 10.00 pm</i></dd><br>
   <dd style="font-size: 20px;"> <b>Note : On every Sunday our mess remains closed.</b></i></dd><br>
 </dl></div>
-<br./
+<br.</div></br.>
 <div style="background: black;color: white;font-size: 20px"> Connect us at : 
 	<a href="https://www.facebook.com/"><i class="fa fa-facebook-square" style="font-size: 20px;color:white"></i></a>
 	<a href="https://accounts.google.com/signin/v2/challenge/pwd?sacu=1&passive=1209600&acui=0&flowName=GlifWebSignIn&flowEntry=ServiceLogin&cid=1&navigationDirection=forward&TL=AM3QAYbCzswCWucdgLHg8sMq3c572qRAnyvxzxqZFcjen2OGGIhtn6V27THfaru4"><i class="fa fa-google" style="font-size: 20px;color:white"></i></a>
