--- a/User/User_Side/User_Homepage.html
+++ b/User/User_Side/User_Homepage.html
@@ -26,14 +26,14 @@
 		</div>
 	</li>
 	<li><a href="./User_Services.html" style="font-size:15px;"><i class="fa fa-shopping-bag"></i> Services</a></li>
-	<li><a href=""><i class="fa fa-rupee" style="font-size:15px;"></i> Package</a></li>
+	<li><a href="./package.html"><i class="fa fa-rupee" style="font-size:15px;"></i> Package</a></li>
 	<li><a href="./User_AboutUs.html" style="font-size:15px;"><i class="fa fa-user-circle"></i> About Us</a></li>
 	<li><a href="./User_ContactUs.html" style="font-size:15px;"><i class="fa fa-phone"></i> Contact Us</a></li>
 	<li><a href="" style="font-size:15px;">More <i class="fa fa-angle-double-down"></i></a>
 		<div class="sub-menu-1" style="position: absolute; z-index: 1;border-radius: 15%">
 			<ul>
 				<li><a href="./qr-code-scanner/index.html">Scan</a></li>
-				<li><a href="">Log-Out</a></li>
+				<li><a href="/mess_management/User/User_login.html">Log-Out</a></li>
 				
 			</ul>
 		</div>
@@ -71,7 +71,7 @@
 	<dd style="font-size: 20px;"> 2) Only mess members are permitted to use mess facilities at the mess.</dd>
 	<dd style="font-size: 20px;"> 3) Futher information will be given once after the registration is confirmed.</dd>
 	<dd style="font-size: 20px;"> 4) The generally adhered timing of messes is as follows. However, there may be a slight variation in timings of different messes.</dd><br>
-	<dd style="font-size: 20px;"> <b>Breakfast :</b><i> 01.00 pm to 4.00 pm</i></dd>
+	<dd style="font-size: 20px;"> <b>Breakfast :</b><i> 08.00 am to 10.00 am</i></dd>
 	<dd style="font-size: 20px;"> <b>Lunch :</b><i> 01.00 pm to 4.00 pm</i></dd>
 	<dd style="font-size: 20px;"> <b>Dinner :</b><i> 08.00 pm to 11.00 pm</i></dd><br>
 	<dd style="font-size: 20px;"> 5) Those who are going for vacation for more than five days are requested to fill the dates of absence in the leave register (deduction book) held in the mess, at least a day in advance. </dd>
