--- a/Admin/QRcode.html
+++ b/Admin/QRcode.html
@@ -4,9 +4,10 @@
 			/* CSS comes here */
 		body 
     {
-      
-      background-image: linear-gradient(rgba(64, 192, 243, 0.8),rgba(64,192,243,0.8)),url(bg.jpg);
-			padding:40px;
+      width: auto;
+      height: auto;
+      background-image: linear-gradient(blue,red);
+			padding:183px;
       align-items: center;
       text-align: center;      
 		}
@@ -18,6 +19,7 @@
 			border-bottom:solid 4px #8c52ff;
 			width:250px;
 			font-size:16px;
+      color:white;
 		}
 			
 		.qr-btn 
