--- a/User/User_Side/Menu_Monday.html
+++ b/User/User_Side/Menu_Monday.html
@@ -96,14 +96,14 @@ body {
 		</div>
 	</li>
 	<li><a href="./User_Services.html" style="font-size:15px;"><i class="fa fa-shopping-bag"></i> Services</a></li>
-	<li><a href=""><i class="fa fa-rupee" style="font-size:15px;"></i> Package</a></li>
+	<li><a href="./package.html"><i class="fa fa-rupee" style="font-size:15px;"></i> Package</a></li>
 	<li><a href="./User_AboutUs.html" style="font-size:15px;"><i class="fa fa-user-circle"></i> About Us</a></li>
 	<li><a href="./User_ContactUs.html" style="font-size:15px;"><i class="fa fa-phone"></i> Contact Us</a></li>
   <li><a href="" style="font-size:15px;padding:5px">More <i class="fa fa-angle-double-down"></i></a>
     <div class="sub-menu-1" style="position: absolute; z-index: 1;border-radius: 15%">
       <ul>
-        <li><a href="">Scan</a></li>
-        <li><a href="">Log-Out</a></li>
+        <li><a href="./qr-code-scanner/index.html">Scan</a></li>
+        <li><a href="/mess_management/User/User_login.html">Log-Out</a></li>
         
       </ul>
     </div>
