--- a/User/User_Side/User_AboutUs.html
+++ b/User/User_Side/User_AboutUs.html
@@ -77,14 +77,14 @@ body {
 		</div>
 	</li>
 	<li><a href="User_Services.html"><i class="fa fa-shopping-bag"></i> Services</a></li>
-	<li><a href=""><i class="fa fa-rupee"></i> Package</a></li>
+	<li><a href="./package.html"><i class="fa fa-rupee"></i> Package</a></li>
 	<li><a href="User_AboutUs.html"><i class="fa fa-user-circle"></i> About Us</a></li>
 	<li><a href="User_ContactUs.html"><i class="fa fa-phone"></i> Contact Us</a></li>
   <li><a href="" style="font-size:15px;padding:5px">More <i class="fa fa-angle-double-down"></i></a>
 		<div class="sub-menu-1" style="position: absolute; z-index: 1;border-radius: 15%">
 			<ul>
-				<li><a href="">Scan</a></li>
-				<li><a href="">Log-Out</a></li>
+				<li><a href="./qr-code-scanner/index.html">Scan</a></li>
+				<li><a href="/mess_management/User/User_login.html">Log-Out</a></li>
 				
 			</ul>
 		</div>
@@ -110,7 +110,7 @@ body {
 <br><hr><br><br>
 <p style="float: left;margin-left: 40px;margin-right: 100px;"><b>Owners :</b></p>
 <div class="container" style="margin-left:330px;margin-top: 60px">
-  <img src="./Breakfast/Arjun.JPG" style="width:200px;height:250px;border: 4px solid black;">
+  <img src="./Breakfast/Arjun.jpeg" style="width:200px;height:250px;border: 4px solid black;">
   <div class="content" style="text-align:center;">
     <h4 style="text-align:center;color:white">M S Patil</h4>
   </div>
@@ -124,7 +124,7 @@ body {
     <h4 style="text-align:center;color: white">Ajay Zad</h4>
   </div>
   <div class="overlay">
-    <div class="text">CO-OWNER</div>
+    <div class="text">OWNER</div>
   </div>
 </div><br>
 <br>
