--- a/User/User_Side/User_ContactUs.html
+++ b/User/User_Side/User_ContactUs.html
@@ -22,14 +22,14 @@
 		</div>
 	</li>
 	<li><a href="User_Services.html" style="font-size:15px;"><i class="fa fa-shopping-bag"></i> Services</a></li>
-	<li><a href=""><i class="fa fa-rupee" style="font-size:15px;"></i> Package</a></li>
+	<li><a href="./package.html"><i class="fa fa-rupee" style="font-size:15px;"></i> Package</a></li>
 	<li><a href="User_AboutUs.html" style="font-size:15px;"><i class="fa fa-user-circle"></i> About Us</a></li>
 	<li><a href="User_ContactUs.html" style="font-size:15px;"><i class="fa fa-phone"></i> Contact Us</a></li>
 	<li><a href="" style="font-size:15px;padding:5px">More <i class="fa fa-angle-double-down"></i></a>
 		<div class="sub-menu-1" style="position: absolute; z-index: 1;border-radius: 15%">
 			<ul>
-				<li><a href="">Scan</a></li>
-				<li><a href="">Log-Out</a></li>
+				<li><a href="./qr-code-scanner/index.html">Scan</a></li>
+				<li><a href="/mess_management/User/User_login.html">Log-Out</a></li>
 				
 			</ul>
 		</div>
@@ -42,15 +42,15 @@
 <p style="margin: 20px;padding: 10px;font-size: 25px"> For any queries regarding the mess and its services please contact the people at desk.</p><p style="margin: 20px;padding: 10px;font-size: 25px">Timing only from 9.00 am to 9.00 pm</p>
 <p style="margin: 20px;font-size: 25px"><b>You can contact to :</b></p>
 <ul style="margin: 20px;font-size: 20px;list-style: none">
-	<li> Malgouda Patil  - 91+ 8951106537</li>
-	<li> Ajay Zad        - 91+ 8095262699</li>
+	<li> Malgouda Patil  - 91+ 1236547890</li>
+	<li> Ajay Zad        - 91+ 9874563210</li>
 </ul>
 <hr style="color:white;">
 <br>
 <p style="margin: 20px;font-size: 25px"><b>You can also reach us up by mailing to these concerned ID's. Mentioned below (ONLY FOR QUERIES)</b></p>
 <ul style="margin: 20px;font-size: 20px;list-style: none">
-	<li>Malgouda Patil  - <a href="mailto:pandzeatery@gmail.com">mallikarjunpatil3789@gmail.com</a></li>
-	<li>Ajay Zad  - <a href="mailto:pandzeatery@gmail.com">ajayzad18@gmail.com</a></li>
+	<li>Malgouda Patil  - <a href="mailto:pandzeatery@gmail.com">pandzeatery@gmail.com</a></li>
+	<li>Ajay Zad  - <a href="mailto:pandzeatery@gmail.com">pandzeatery@gmail.com</a></li>
 </ul><br><br>
 <div style="background: black;color: white;font-size: 20px"> Connect us at : 
 	<a href="https://www.facebook.com/"><i class="fa fa-facebook-square" style="font-size: 20px;color:white"></i></a>
