--- a/User/User_Side/package.html
+++ b/User/User_Side/package.html
@@ -85,28 +85,28 @@ body {
 <body>
 <div class="menu-bar">
 <ul>
-	<li><a href="file:///F:/Project/User_Homepage.html" style="font-size:15px;"><i class="fa fa-home"></i> Home</a></li>
+	<li><a href="./User_Homepage.html" style="font-size:15px;"><i class="fa fa-home"></i> Home</a></li>
 	<li><a href="" style="font-size:15px;"><i class="fa fa-newspaper-o"></i> Menu</a>
 		<div class="sub-menu-1" style="position: absolute; z-index: 1;border-radius: 15%">
 			<ul>
-				<li><a href="file:///F:/Project/Menu_Monday.html">Monday</a></li>
-				<li><a href="file:///F:/Project/Menu_Tuesday.html">Tuesday</a></li>
-				<li><a href="file:///F:/Project/Menu_Wednesday.html">Wednesday</a></li>
-				<li><a href="file:///F:/Project/Menu_Thursday.html">Thursday</a></li>
-				<li><a href="file:///F:/Project/Menu_Friday.html">Frinday</a></li>
-				<li><a href="file:///F:/Project/Menu_Saturday.html">Saturday</a></li>
+				<li><a href="./Menu_Monday.html">Monday</a></li>
+				<li><a href="./Menu_Tuesday.html">Tuesday</a></li>
+				<li><a href="./Menu_Wednesday.html">Wednesday</a></li>
+				<li><a href="./Menu_Thursday.html">Thursday</a></li>
+				<li><a href="./Menu_Friday.html">Frinday</a></li>
+				<li><a href="./Menu_Saturday.html">Saturday</a></li>
 			</ul>
 		</div>
 	</li>
-	<li><a href="file:///F:/Project/User_Services.html" style="font-size:15px;"><i class="fa fa-shopping-bag"></i> Services</a></li>
-	<li><a href="file:///F:/Project/package.html"><i class="fa fa-rupee" style="font-size:15px;"></i> Package</a></li>
-	<li><a href="file:///F:/Project/User_AboutUs.html" style="font-size:15px;"><i class="fa fa-user-circle"></i> About Us</a></li>
-	<li><a href="file:///F:/Project/User_ContactUs.html" style="font-size:15px;"><i class="fa fa-phone"></i> Contact Us</a></li>
+	<li><a href="User_Services.html" style="font-size:15px;"><i class="fa fa-shopping-bag"></i> Services</a></li>
+	<li><a href="package.html"><i class="fa fa-rupee" style="font-size:15px;"></i> Package</a></li>
+	<li><a href="User_AboutUs.html" style="font-size:15px;"><i class="fa fa-user-circle"></i> About Us</a></li>
+	<li><a href="User_ContactUs.html" style="font-size:15px;"><i class="fa fa-phone"></i> Contact Us</a></li>
 	<li><a href="" style="font-size:15px;padding:5px">More <i class="fa fa-angle-double-down"></i></a>
 		<div class="sub-menu-1" style="position: absolute; z-index: 1;border-radius: 15%">
 			<ul>
-				<li><a href="file:///F:/Project/qr-code-scanner/index.html">Scan</a></li>
-				<li><a href="file:///F:/Project/Menu_Tuesday.html">Log-Out</a></li>
+				<li><a href="./qr-code-scanner/index.html">Scan</a></li>
+				<li><a href="/mess_management/User/User_login.html">Log-Out</a></li>
 				
 			</ul>
 		</div>
@@ -117,7 +117,7 @@ body {
 <marquee style="color:white;background-color: black" direction = "right", scrollamount="15"><i><b style="font-size:150%;text-shadow: 1px 1px blue">WELCOME TO P & Z EATERY AND EATING HOUSE</b></i></marquee>
 <div>
 	<div class="container" style="margin-left:60px;margin-top: 40px">
-  <img src="F:\Project\Breakfast\gold.jpg" style="width:200px; height:250px; border: 15px solid yellow;">
+  <img src="./Breakfast/" style="width:200px; height:250px; border: 15px solid yellow;">
   <div class="content" style="text-align:center;">
     <h4 style="text-align:center;color:white">GOLD</h4>
   </div>
@@ -137,7 +137,7 @@ body {
 
 <div>
 	<div class="container" style="margin-left:60px;margin-top: 40px">
-  <img src="F:\Project\Breakfast\silver.jpg" style="width:200px; height:250px; border: 15px solid #D3D3D3;">
+  <img src="./Breakfast/" style="width:200px; height:250px; border: 15px solid #D3D3D3;">
   <div class="content" style="text-align:center;">
     <h4 style="text-align:center;color:white">SILVER</h4>
   </div>
@@ -156,7 +156,7 @@ body {
 
 <div>
 	<div class="container" style="margin-left:60px;margin-top: 40px">
-  <img src="F:\Project\Breakfast\bronze1.jpg" style="width:200px; height:250px; border: 15px solid #b08d57;">
+  <img src="./Breakfast/" style="width:200px; height:250px; border: 15px solid #b08d57;">
   <div class="content" style="text-align:center;">
     <h4 style="text-align:center;color:white">BRONZE</h4>
   </div>
